# Clasp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  audit_report.md  clasp_context_architecture.md  clasp_context_engines.md  design.md  implementation_plan.md  implementation_plan1  implementation_plan2.md  pyproject.toml  top_clasp_problems.md
clasp/: __init__.py  config.py
clasp/industrial/: __init__.py  causal_learner.py  engine.py  schemas.py  time_buffer.py
clasp/industrial/agents/: __init__.py  optimizer_agent.py  physics_validator.py  root_cause_agent.py  watcher_agent.py
clasp/industrial/api/: __init__.py  main.py  routes.py  ws.py
clasp/industrial/ingest/: __init__.py  csv_adapter.py  opcua_connector.py  tep_simulator.py
clasp/scripts/: run_tep_fault5.py  run_tep_normal.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/api/: client.js
dashboard/src/components/: AgentLog.jsx  CausalNetwork.jsx  SettingsPanel.jsx  TelemetryCharts.jsx
scripts/: __init__.py  download_tep.py  export_engines.py  run_opcua_demo.py
tests/: test_phase0_imports.py  test_phase1_engine.py  test_phase2_m1.py  test_phase3_m2_m3.py  test_phase4_api.py  test_phase6_opcua.py
